styles.css
:root {
  --primary-color: #1a6dff;
  --primary-color-dark: #152243;
  --primary-color-light: #9fd1ff;
  --primary-color-light-transparent: #9fd1ff49;
  --transparent-background-light: rgba(255, 255, 255, 0.8);
  --transparent-background-dark: rgba(0, 20, 20, 0.8);
  --grayed: #9a9a9a;
  --lightgray: rgb(240, 240, 240);
  --scroll-bar-color: #c5c5c5;
  --scroll-bar-bg-color: #f6f6f6;
  --border-radius-small: 4px;
  --border-radius-regular: 8px;
  --font-family: Montserrat;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  scrollbar-width: thin;
  scrollbar-color: var(--scroll-bar-color) var(--scroll-bar-bg-color);
}

/* Works on Chrome, Edge, and Safari */
*::-webkit-scrollbar {
  width: 12px;
}

*::-webkit-scrollbar-track {
  background: var(--scroll-bar-bg-color);
}

*::-webkit-scrollbar-thumb {
  background-color: var(--scroll-bar-color);
  border-radius: 20px;
  border: 3px solid var(--scroll-bar-bg-color);
}

html,
body {
  overflow: hidden;
  font-family: var(--font-family);
}

#three-canvas {
  position: fixed;
  top: 0;
  left: 0;
  outline: none;
  background-image: linear-gradient(0, #529554a4 0%, #9de7fca4 80%);
}

#file-input {
  z-index: 1;
  position: absolute;
  left: 100%;
  transform: translateX(-100%);
}

/* #region Form */

.styling-form {
  display: grid;
  grid-template-columns: max-content 1fr;
  gap: 16px;
  align-items: center;
}

.styling-form .styling-form-input {
  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px -1px rgba(0, 0, 0, 0.1);
  border-radius: var(--border-radius-small);
  border: solid 1px lightgray;
  height: 30px;
}

.styling-form .styling-form-input[type="text"] {
  text-align: center;
}

.styling-form-select-plus-add {
  display: grid;
  grid-template-columns: 1fr auto;
  align-items: center;
  gap: 8px;
}

.styling-form-icon {
  cursor: pointer;
  transition: all 0.3s;
}
.styling-form-icon:hover {
  transform: scale(1.1);
  transition: all 0.3s;
}

.styling-form > .styling-form-warning {
  grid-column: span 2;
  width: 100%;
  text-align: center;
  color: red;
}

.styling-form-submit {
  grid-column: span 2;
  background-color: var(--primary-color-dark);
  color: white;
  border: none;
  border-radius: var(--border-radius-small);
  height: 30px;
  cursor: pointer;
  transition: all 0.3s;
}

.styling-form-submit:hover {
  box-shadow: 0px 0px 4px 4px var(--primary-color-light-transparent);
  transform: scaleX(1.02);
  transition: all 0.3s;
}

.styling-form-color-picker-wrapper {
  height: 180px;
}

.styling-form-select{
  display: grid;
  grid-template-columns: 1fr 25px;
  align-items: center;
  cursor: pointer;
  position: relative;
  font-size: 14px;
}

.styling-form-select > span{
  padding: 0 4px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.styling-form-select > img{
  transform: rotate(90deg);
}

.styling-form-select > ul{
  list-style: none;
  padding: 4px 0;
  background-color: white;
  z-index: 99;
  grid-column: span 2;
  width: 98%;
  position: absolute;
  left: 50%;
  top: 100%;
  transform: translate(-50%);
  border: solid 1px lightgray;
  border-radius: var(--border-radius-small);
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  display: grid;
  overflow-y: scroll;
}

.styling-form-select > ul > li{
  padding: 0 8px;
  width: 100%;
  height: 24px;
  display: flex;
  align-items: center;
  gap: 8px;
  transition: background-color 0.3s;
}

.styling-form-select > ul > li > span{
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.styling-form-select > ul > li:hover{
  background-color: var(--primary-color-light-transparent);
  transition: background-color 0.3s;
}

.annotation-category-select-colortag{
  width: 8px;
  height: 100%;
}

/* #endregion Form */

/* #region Tools side tab */

.tools-side-container {
  z-index: 1;
  position: absolute;
  background-color: transparent;
  display: inline-block;
  padding: 10px;
  height: 100vh;
  font-family: var(--font-family);
  overflow-y: scroll;
}

.tools-side-content {
  display: grid;
  gap: 21px;
}

.tools-side-feature {
  max-width: 340px;
  display: grid;
  place-items: start;
  overflow: hidden;
  filter: drop-shadow(0px 8px 6px rgba(0, 0, 0, 0.08));
  border: none;
}

.tools-side-feature-icon {
  width: 40px;
  height: 40px;
  display: grid;
  place-items: center;
  padding: 8px;
  border-radius: var(--border-radius-small);
  background-color: var(--primary-color-dark);
  box-shadow: 0px 1px 1px 0 var(--primary-color);
  z-index: 99;
}

.tools-side-feature-icon.not-ready {
  opacity: 50%;
  cursor: not-allowed;
}

.tools-side-feature > :not(.tools-side-feature-icon) {
  display: none;
}

.tools-side-feature-icon {
  box-shadow: none;
}

.tools-side-feature-header {
  color: white;
  width: 100%;
  font-weight: 700;
  user-select: none;
}

.tools-side-feature-close {
  margin: 0 10px 0 5px;
  height: 24px;
  cursor: pointer;
}

.tools-side-feature-name {
  background-color: var(--primary-color-light);
  color: white;
  width: 100%;
  padding: 5px 10px;
  overflow: hidden;
  grid-column: span 3;
  font-weight: 500;
  user-select: none;
  word-break: break-word;
}

.tools-side-feature.feature-active {
  border-radius: var(--border-radius-regular);
  background-color: var(--primary-color-dark);
  grid-template-columns: 40px auto 39px;
  place-items: center;
  font-size: 16px;
  line-height: 20px;
}

.tools-side-feature.opening {
  animation: sidetools-feature-active 0.5s;
}

.tools-side-feature.closing {
  animation: sidetools-feature-active 0.5s reverse;
}

.tools-side-feature.feature-active > :not(.tools-side-feature-icon) {
  display: block;
}

.tools-side-feature-content {
  width: 340px;
  background-color: white;
  grid-column: span 3;
}

.tools-side-properties-tabs {
  display: flex;
  justify-content: space-between;
  padding: 0 10px;
  box-shadow: inset 0 -1px 0px 0px lightgray;
  color: var(--grayed);
  font-size: 14px;
}
/* ... */

